--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "devextreme": "^17.1.7",
+    "devextreme-angular": "^17.1.7",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
