--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "npm run build & concurrently --kill-others \"npm run serve-api\" \"npm run serve\"",
+    "serve": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build --output-path=public",
+    "serve-api": "node server.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,11 +23,19 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "body-parser": "^1.18.2",
+    "concurrently": "^3.5.0",
     "core-js": "^2.4.1",
     "devextreme": "^17.1.7",
     "devextreme-angular": "^17.1.7",
+    "express": "^4.16.2",
+    "express-fileupload": "^0.3.0",
+    "fine-uploader": "^5.15.0",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "mkdirp": "0.5.1",
+    "multiparty": "4.1.2",
+    "rimraf": "2.5.0"
   },
   "devDependencies": {
     "@angular/cli": "1.4.1",
