--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "core-js": "^2.4.1",
     "devextreme": "^17.1.7",
     "devextreme-angular": "^17.1.7",
+    "devextreme-intl": "^17.1.7",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
     "fine-uploader": "^5.15.0",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14",
     "mkdirp": "0.5.1",
     "multiparty": "4.1.2",
-    "rimraf": "2.5.0"
+    "rimraf": "2.5.0",
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.4.1",
